--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,22 @@ dependencies:
   google_sign_in: ^6.2.1
   fl_chart: ^0.65.0
   intl: ^0.19.0
+  
+  # Local Storage
+  drift: ^2.14.1
+  sqlite3_flutter_libs: ^0.5.18
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  
+  # Connectivity
+  connectivity_plus: ^5.0.2
+  uuid: ^4.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  drift_dev: ^2.14.1
+  build_runner: ^2.4.7
   flutter_lints: ^2.0.0
 
 flutter:
