--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,15 @@ dependencies:
   # Local Storage
   drift: ^2.14.1
   sqlite3_flutter_libs: ^0.5.18
-  path_provider: ^2.1.1
+  path_provider: ^2.1.1 
   path: ^1.8.3
   
   # Connectivity
   connectivity_plus: ^5.0.2
   uuid: ^4.3.1
+  
+  # Permissions
+  permission_handler: ^11.2.0
 
 dev_dependencies:
   flutter_test:
