--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,15 @@ dependencies:
   
   # Permissions
   permission_handler: ^11.2.0
+  
+  # HTTP
+  http: ^1.1.0
+  
+  # Local Notifications
+  flutter_local_notifications: ^19.2.1
+
+  flutter_background: ^1.3.0
+  notifications: ^3.1.0
 
 dev_dependencies:
   flutter_test:
