--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,9 @@ dependencies:
   
   # Local Notifications
   flutter_local_notifications: ^19.2.1
-
   flutter_background: ^1.3.0
   notifications: ^3.1.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
